feat: full-fledged commands for the user have been created
3 full commands have been implemented. Refactorings have been made in nlp_parsing, audio_capture and in the Main class, minor changes have been made to fully launch the application. And also the utility class CityCoordinatesLoader was added